{
    "name": "MiscControls",
    "maps": [
        {
            "name": "Inventory",
            "id": "4ce03327-4242-4775-8f2a-c6ccfa1e1be4",
            "actions": [
                {
                    "name": "DeployItem",
                    "type": "Button",
                    "id": "37b822a8-89f0-4fa2-9a07-fe61cd73f736",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleItem",
                    "type": "Button",
                    "id": "98a3da22-79f8-4f93-8771-f5ae556a6286",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8e0453f-223a-4885-b73f-ae741de2eaa3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DeployItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cf770b9-780e-44c6-8446-834cca5bf89e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CycleItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Global",
            "id": "03b5b92a-7325-4857-b659-12600a53bcee",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "4361f935-ad4c-4015-b6b7-69457bca0ac0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c094f120-081a-426f-9559-2514edc6c670",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0e5cc9c-70e7-49c9-9b73-baf588e34143",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}